--- a/AppNgasal/app/src/main/res/values/strings.xml
+++ b/AppNgasal/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="action_settings">Settings</string>
-    <string name="topups">"%1$d Topup"</string>
+    <string name="topups">"RP. %1$d"</string>
 </resources>
