--- a/AppNgasal/app/src/main/res/values/strings.xml
+++ b/AppNgasal/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="topups">"RP. %1$d"</string>
+    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
